--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
     "d3-dsv": "^1.0.8",
     "fs": "^0.0.1-security",
     "md5": "^2.2.1",
-    "request": "^2.87.0"
-  },
-  "devDependencies": {
+    "request": "^2.87.0",
     "clean-css": "^4.1.11"
   },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
