--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "csvToCss": "csv_to_css.js"
   },
   "dependencies": {
+    "chalk": "^2.4.1",
+    "clean-css": "^4.1.11",
     "csstree-validator": "^1.4.0",
     "d3-dsv": "^1.0.8",
-    "fs": "^0.0.1-security",
     "md5": "^2.2.1",
-    "request": "^2.87.0",
-    "clean-css": "^4.1.11"
+    "request": "^2.87.0"
   },
   "devDependencies": {},
   "scripts": {
